# One-Billion-DataQuality-Challenge

./: .gitignore  README.md  pyproject.toml
docs/: index.md
quickstarter/: README.md  exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_07.py  exemplo_08.py  exemplo_09.py  exemplo_10.py  pandera_01.py  pandera_02.py
src/: dataquality_dask.py
src/schema/: measurements.py
